# waybar-pwetty-box

./: .gitignore  AGENTS.md  Cargo.toml  README.md  rust-toolchain.toml
.beads/: .auto-import-issues.jsonl  config.yaml  interactions.jsonl  issues.jsonl  metadata.json
antithesis/scratchbook/: deployment-topology.md  existing-assertions.md  property-catalog.md  property-relationships.md  sut-analysis.md
antithesis/scratchbook/evaluation/: antithesis-fit.md  coverage-balance.md  implementability.md  synthesis.md  wildcard.md
antithesis/scratchbook/properties/: active-accent-follows-focus.md  animating-gate-matches-stored-content.md  animating-markup-has-tick-source.md  cache-error-demotes-live-tile.md  cairo-text-survives-gl-failure.md  cffi-v1-config-transport-retype.md  cold-start-stream-tile-converges.md  config-resolve-preserves-tile-identity.md  content-snapshot-torn-read.md  contentstore-mutex-never-poisoned.md  daemon-restart-no-placeholder-clobber.md  draw-path-gl-panic-tripwires.md  duplicate-line-rerender-idempotent.md  embed-placeholder-parity.md  engine-init-failure-contained.md  first-party-overlay-garbage-tolerant.md  hook-prompt-never-silently-dropped.md  icon-negative-cache-pins-missing.md  icon-src-read-bounded-nonblocking.md  idle-decay-reaches-static.md  idle-level-gate-clamp-divergence.md  live-prompt-session-never-reaped.md  module-teardown-never-aborts-host.md  neighbor-modules-stay-live.md  no-control-chars-in-pango-markup.md  orphaned-tile-watch-bounded.md  output-readd-tile-recovers.md  poll-mode-cold-start-converges.md  poll-refresh-survives-hung-exec.md  producer-binary-swap-mixed-versions.md  producer-kill-tile-reconverges.md  prompt-priority-survives-session-cap.md  prompt-pulse-visibly-advances.md  publish-visible-within-poll-bound.md  reload-conserves-producer-chains.md  respawn-backoff-floor-holds.md  session-desktop-attribution-tracks-window.md  shader-pass-blend-state-neutralized.md  shader-recompile-gl-object-leak.md  shader-recompile-only-on-mtime-change.md  (+11 more)
examples/: measure.rs  render_content.rs  render_data.rs  render_shader.rs  render_text.rs  render_tile.rs  waybar-config.jsonc
examples/shaders/: aurora.glsl  night.glsl  reactive.glsl
shaders/: caustic.glsl  night.glsl
src/: config.rs  content.rs  gl.rs  lib.rs  markup.rs  offscreen.rs  render.rs  shader.rs  svg.rs  text.rs  tile.rs
src/tiles/: mod.rs
test/: niri.kdl  orchestrate.sh  shot.sh
test/waybar/: config.jsonc  style.css
tiles/claude/: README.md  schema.json  tile.json
tiles/claude/samples/: duo.json  empty.json  idle.json  prompt.json  shell.json  window.json  working.json
tiles/claude2/: README.md  schema.json  tile.json
tiles/claude2/samples/: duo.json  mixed.json  single.json
tiles/empty/: README.md  schema.json  tile.json
tiles/empty/samples/: active.json  empty.json
