[package]
name = "pwetty-box"
version = "0.1.0"
edition = "2021"
rust-version = "1.88"
description = "Waybar CFFI module that draws elaborate multiline text/icon tiles with GPU shaders (GtkGLArea + femtovg)"
license = "MIT OR Apache-2.0"

[lib]
# cdylib: waybar dlopens the module. rlib: so examples/bins (e.g. the offscreen
# renderer) can link the crate's Rust API.
name = "pwetty_box"
crate-type = ["cdylib", "rlib"]

[dependencies]
# Waybar CFFI ABI bindings. Re-exports gtk-rs 0.18 (GTK3) as `waybar_cffi::gtk`.
waybar-cffi = "0.1.1"
# GPU 2D canvas: multiline text, paths, gradients, font-glyph icons. OpenGl renderer.
femtovg = "0.25"
# Resolve GL function pointers from the in-process libepoxy that waybar already links.
epoxy = "0.1"
libloading = "0.8"
# Our own surfaceless EGL context: we render femtovg offscreen and composite via
# Cairo, because a GtkGLArea can't alpha-composite against a translucent bar.
khronos-egl = { version = "6", features = ["static"] }
# Rich text: Pango markup laid out and drawn onto the Cairo composite surface.
pangocairo = "0.18"
# Parse tile content (XML-ish) to route custom effect tags away from Pango.
roxmltree = "0.20"
# JSON config plumbed through from the waybar `cffi/...` block.
serde = { version = "1", features = ["derive"] }
# Tile data model: the command's JSON output is the data; `serde_json::Value`.
serde_json = "1"
# Template engine: render the tile template (Jinja-ish `{{ }}`/`{% %}`) against
# the data, with HTML/XML autoescape so bound values are Pango-markup-safe.
minijinja = "2"
# Raw GL for tile-level background shaders (Shadertoy-style fragment shaders
# rendered to an offscreen texture). Same glow version femtovg uses.
glow = "0.17"
# Pure-Rust SVG rasterizer (usvg + tiny-skia) for bundled/path icons — composited
# onto Cairo through the same RGBA-buffer path as femtovg/shaders. No C deps.
resvg = "0.45"
# Enables cairo's `png` feature (write_to_png) for `render_png` — used by the
# `pwetty` CLI's render subcommand and the offscreen vision examples. Same
# cairo-rs (0.18) re-exported via `waybar_cffi::gtk`, so the feature unifies.
cairo-rs = { version = "0.18", features = ["png"] }

# `pwetty` introspection CLI (list / schema / check / render). Links the rlib.
[[bin]]
name = "pwetty"
path = "src/bin/pwetty.rs"

[dev-dependencies]
image = "0.25"

[profile.release]
opt-level = 3
lto = "thin"
